--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.65b0e5b4.svg" />
+    <link rel="icon" type="image/svg+xml" href="/todo-list/assets/favicon.65b0e5b4.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Список дел</title>
-    <script type="module" crossorigin src="/assets/index.b291aa6a.js"></script>
-    <link rel="stylesheet" href="/assets/index.c0b8d47a.css">
+    <script type="module" crossorigin src="/todo-list/assets/index.b291aa6a.js"></script>
+    <link rel="stylesheet" href="/todo-list/assets/index.c0b8d47a.css">
   </head>
   <body>
     <div id="root"></div>
